--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -75,6 +75,12 @@
   justify-content: space-between;
 }
 
+.flex_end {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
 .flex_cnt {
   display: flex;
   justify-content: space-between;
