--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -62,6 +62,9 @@
               &.type_ci{ color: $ci;
                 @include screen('mo'){ font-size: 80rem; white-space: nowrap;}
               }
+              &.web3_ai{ color: $ci; font-size: 90rem; font-weight: 700;
+                @include screen('mo'){ font-size: 36rem; white-space: nowrap;}
+              }
               span{ font-weight: 400;}
             }
             .scr_down{ transform: rotate(90deg); position: absolute; right: 44rem; bottom: 131rem; z-index: 20;
@@ -621,6 +624,7 @@
           .his_cont_mo_wrap{ position: relative; height: 100%; overflow: hidden;@include m_full_layout;}
           }
           .info_box{ width: 100%; height: 400rem; overflow: hidden;
+            @include screen('tablet'){ height: 450rem; overflow: visible;}
             @include screen('mo'){ height: 100%; overflow: visible;}
             
             .inner{ padding-top: 70rem; border-top: 1px solid $black;
